--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,6 @@ matrix:
 - TEST_SDK=iphonesimulator12.1 OS=12.1 NAME='iPhone 7'
 
 script:
-xcodebuild test -enableCodeCoverage YES -project UIComponentLibrary.xcodeproj -scheme UIComponentLibrary -sdk $TEST_SDK -destination "platform=iOS Simulator,OS=$OS,name=$NAME" ONLY_ACTIVE_ARCH=YES
+- set -o pipefail && xcodebuild test -enableCodeCoverage YES -project UIComponentLibrary.xcodeproj -scheme UIComponentLibrary -sdk $TEST_SDK -destination "platform=iOS Simulator,OS=$OS,name=$NAME" ONLY_ACTIVE_ARCH=YES
+after_success:
+- slather
