--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: objective-c
-
 osx_image: xcode10.2
 env:
 matrix:
@@ -8,5 +7,4 @@ matrix:
 
 script:
 - set -o pipefail && xcodebuild test -enableCodeCoverage YES -project UIComponentLibrary.xcodeproj -scheme UIComponentLibrary -sdk $TEST_SDK -destination "platform=iOS Simulator,OS=$OS,name=$NAME" ONLY_ACTIVE_ARCH=YES
-after_success:
-- slather
+- pod lib lint
